# AI-Coding

./: .gitignore  CKAD补充内容-Helm与Kustomize实战.md  CKAD认证备考指南.md  DOCKER_GUIDE_PROGRESS.md  Docker底层原理与生产实战指南.md  Embeddings嵌入技术笔记.md  Embeddings底层原理.md  K8S_UPPER_PROGRESS.md  K8S_三卷本章节规划.md  K8S上卷-核心原理与基础实战-第10章.md  K8S上卷-核心原理与基础实战-第11章.md  K8S上卷-核心原理与基础实战-第12章.md  K8S上卷-核心原理与基础实战-第3章.md  K8S上卷-核心原理与基础实战-第4章.md  K8S上卷-核心原理与基础实战-第5章.md  K8S上卷-核心原理与基础实战-第6章.md  K8S上卷-核心原理与基础实战-第7章.md  K8S上卷-核心原理与基础实战-第8章.md  K8S上卷-核心原理与基础实战-第9章.md  K8S上卷-核心原理与基础实战.md  K8S中卷-高级特性与生态集成-第13章.md  K8S中卷-高级特性与生态集成-第14章.md  K8S中卷-高级特性与生态集成-第15章.md  K8S中卷-高级特性与生态集成-第16章.md  K8S中卷-高级特性与生态集成.md  LLM大语言模型笔记.md  LLM底层原理.md  LangChain学习笔记.md  Python基础语法笔记.md  Python脚本编程底层原理与工程实践.md  RAG底层原理.md  RAG技术栈-多维学习指南.md  RAG技术栈-实战练习-答案.py  RAG技术栈-实战练习.md  RAG故障排查深度指南.md  RAG检索增强生成笔记.md  README.md  docker常用命令.md  poetry学习笔记.md  向量数据库底层原理.md  (+2 more)
pdf-chatbot/: .env.example  README.md  example.py  pyproject.toml  快速启动.sh  通义千问配置指南.md
pdf-chatbot/src/pdf_chatbot/: __init__.py  config.py  document_loader.py  main.py  qa_chain.py  vector_store.py
